--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "lucide-react": "^0.284.0",
     "next": "14.1.0",
+    "postcss": "^8.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "lucide-react": "^0.284.0",
-    "shadcn-ui": "^0.8.0"
+    "shadcn-ui": "^0.8.0",
+    "tailwindcss": "^3.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "typescript": "^5.8.3"
   }
 }
